@@ -5,6 +5,7 @@
 - changed the official spelling from "poEdit" to "Poedit"
 - preserve old msgid records (#| msgid "...") when saving
 - preserve deleted records when updating catalogs
+- preserve msgctxt entries in catalogs (#1680554)
 
 
 Version 1.3.7
